# Software_Engineering_Assessment_2025_AR_RW_RS

./: .gitignore  404.html  Dockerfile  Jenkins_output.txt  Jenkinsfile  LICENSE  Patient1.vcf  README.md  app.py  environment.yml  index.html  main.py  mkdocs.yaml  pyproject.toml  query_flask_with_gene.html  requirements.txt  sea_app.toml
.github/workflows/: codecov.yml  tests_AR_codeov.yml
app/: app.py
app/templates/: Database_Query_Flask.html  Display_All_Flask.html  Home_Template_Flask.html  db_display_page.html  db_query_page.html  homepage.html
docs/: index.md  installation.md  technical_manual.md  user_manual.md
flask_app/: flask_app.py
flask_app/templates/: success.html  uploads.html
installation/: index.html
search/: search_index.json
technical_manual/: index.html
tests/: test  test_app.py  test_clinvar.py  test_main.py  test_parser.py  test_vv_search.py
tests/test_integration/: Jenkinsfile
tests/test_unit/: test_app.py  test_clinvar.py  test_database_functions.py  test_db_tools.py  test_error_handlers.py  test_flask_app.py  test_main.py  test_parser.py  test_stringify.py  test_vv_search.py
tools/flask_search_database/: Database_Query_Flask.py  Flask_DB_Query.py  query_database_flask.py  sea(8).db  sea.db
tools/flask_search_database/templates/: Flask_Home.html  Flask_Query.html  home_flask.html  query_flask.html
tools/modules/: Entrez.py  HGVS_convertion.py  HGVS_fetcher.py  clinvar_functions.py  clinvar_request.py  database_functions.py  detailed_request.py  search_term.py  variantAnnotator.py  vv_functions.py
tools/modules/database_scripts/: patientVariantTable.py  patientVariantTableAppend.py  variantAnnotationsTable.py
tools/utils/: appendVCF.py  error_handlers.py  logger.py  parseVCF.py  parser.py  stringify.py  timer.py
user_manual/: index.html
variant_db_query_app/: app.py
variant_db_query_app/templates/: Home_Template_Flask.html  home_chatgpt.html  upload_existing_chatgpt.html  upload_new_chatgpt.html
