[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SoftwareEngineeringAssessment"
version = "0.0.1"
license = { text = "MIT" } 
authors = [
    { name = "Arjun Ryatt", email = "arjun.ryatt@postgrad.manchester.ac.uk"},
    { name = "Rebecca Sizer", email = "rebecca.sizer@postgrad.manchester.ac.uk"},
    { name = "Rachel Wellman", email = "rachel.wellman@postgrad.manchester.ac.uk"}
]

description = "A web-based application tool for annotating germline variant data"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["sea_app", "VariantValidator", "Clinvar", "Genomics", "Annotation", "Database"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended audience :: Clinical Healthcare Professionals",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "pygments==2.19.2",
    "flask==3.1.2",
    "flask_restx==1.3.2",
    "requests==2.32.5",
    "Werkzeug==3.1.3",
    "Bio==1.8.1",
    "pytest==8.4.2",
    "openpyxl==3.1.5",
    "coverage==7.13.0",
    "pytest-cov==7.0.0"
]

[project.optional-dependencies]
test = ["pytest==8.4.2"]

[project.urls]
Homepage = "https://github.com/RebeccaSizer/Software_Engineering_Assessment_2025_AR_RW_RS"
Repository = "https://github.com/RebeccaSizer/Software_Engineering_Assessment_2025_AR_RW_RS"
Issues = "https://github.com/RebeccaSizer/Software_Engineering_Assessment_2025_AR_RW_RS/issues"
Actions = "https://github.com/RebeccaSizer/Software_Engineering_Assessment_2025_AR_RW_RS/actions"

[tool.setuptools.packages.find]
include = ["Software_Engineering_Assessment_2025_AR_RW_RS*"]
exclude = ["tmp*", "assets*", "logging*"]

[tool.coverage.run]
omit = ["*/__init__.py"]

[tool.coverage.report]
omit = ["*/__init__.py"]
